<resources>
    <string name="app_name">PreTravel</string>
    <string name="facebook_app_id">318668285132050</string>

    <string name="add">추가하기</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Nickname</string>
    <string name="hint_auth">인증문자</string>
    <string name="hint_country">국가입력(필수)</string>
    <string name="hint_city">도시입력(선택)</string>
    <string name="hint_where">어디로?</string>
    <string name="hint_search">  장소 및 키워드 입력</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_only">확인</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="btn_chk">확인</string>
    <string name="btn_auth">인증</string>
    <string name="btn_home">HOME</string>
    <string name="btn_me">ME</string>
    <string name="btn_mypage">MYPAGE</string>
    <string name="btn_search">SEARCH</string>
    <string name="btn_movie">MOVIE</string>
    <string name="btn_book">BOOK</string>
    <string name="btn_info">INFO</string>
    <string name="btn_setting">SETTING</string>
    <string name="btn_posting">글쓰기</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="gcm_defaultSenderId">어</string>

</resources>
